--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,32 @@
 .seccionVisible{
     background-color: black;
-    width: 100vw;
     height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .general{
-    width: 75%;
-    height: 75%;
+    width: 50em;
+    height: 30em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.general1
+.general1{
+    background-color: aqua;
+}
+
+.general2{
+    background-color: blue;
+}
+
+.general3{
+    background-color: red;
+}
+
+.general4{
+    background-color: green;
+}
