--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .seccionVisible{
-    background-color: black;
+    background-color: #22346c;
     height: 100vh;
     width: 100vw;
     display: flex;
