--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body{
+    margin: 0;
+}
 .seccionVisible{
     background-color: #22346c;
     height: 100vh;
@@ -11,22 +14,46 @@
 .sup{
     height: 20%;
     width: 100%;
-    background-color: greenyellow;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+.logo{
+    height: 10em;
 
+}
+.fotoLogo{
+    width: 8em;
+    margin-top: 1em;
+
+}
 .cent{
     height: 60%;
     width: 100%;
-    background-color: grey;
+    display: flex; 
+    justify-content: center;  
+    align-items: center; 
+}
+
+.fotoPortada{
+    width: 35em;
+    
 }
 
 .inf{
     height: 20%;
     width: 100%;
-    background-color: hotpink;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.startButtom{
+    font-size: 2em;
+    border-radius: 1em;
+    background-color: #69dfe1;
+    color: #22346c;
+    width: 6em;
 }
 .general{
     width: 50em;
