--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
 body{
     margin: 0;
 }
@@ -18,6 +21,12 @@ body{
     justify-content: center;
     align-items: center;
 }
+
+.sup2{
+    color: #69dfe1;
+    font-size: 2em;
+    margin-bottom: 1em;
+}
 .logo{
     height: 10em;
 
@@ -35,9 +44,77 @@ body{
     align-items: center; 
 }
 
+.col1{
+    height: 30em;
+    background-color: brown;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.col3{
+    height: 30em;
+    background-color: brown;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.col2{
+    height: 32em;
+    width: 20em;
+    background-color: coral;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.jug1{
+    height: 7.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.jug2{
+    height: 7.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.jug3{
+    height: 7.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.jug4{
+    height: 7.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.fotoBela1{
+    height: 7.5em;
+    border: 0.2em solid #69dfe1;
+}
+.fotoPaquito1{
+    height: 7.5em;
+    border: 0.2em solid #69dfe1;
+}
+.fotoLebron1{
+    height: 7.5em;
+    border: 0.2em solid #69dfe1;
+}
+.fotoLamperti1{
+    height: 7.5em;
+    border: 0.2em solid #69dfe1;
+}
 .fotoPortada{
     width: 35em;
-    
 }
 
 .inf{
@@ -63,13 +140,7 @@ body{
     align-items: center;
 }
 
-.general1{
-    background-color: aqua;
-}
 
-.general2{
-    background-color: blue;
-}
 
 .general3{
     background-color: red;
