--- a/css/style.css
+++ b/css/style.css
@@ -197,11 +197,33 @@ body{
     justify-content: center;
     align-items: center;
 }
-
 .startButtom{
     font-size: 2em;
     border-radius: 1em;
     background-color: #69dfe1;
     color: #22346c;
     width: 6em;
+}
+.botonPlayer1{
+    font-size: 1em;
+    border-radius: 1em;
+    background-color: #69dfe1;
+    color: #22346c;
+    width: 8em;
+    margin-right: 1em;
+}
+.botonPlayer2{
+    font-size: 1em;
+    border-radius: 1em;
+    background-color: #69dfe1;
+    color: #22346c;
+    width: 8em;
+    margin-right: 1em;
+}
+.botonReinicio{
+    font-size: 2em;
+    border-radius: 1em;
+    background-color: #69dfe1;
+    color: #22346c;
+    width: 8em;
 }
