--- a/css/style.css
+++ b/css/style.css
@@ -49,12 +49,18 @@ body{
     align-items: center; 
     flex-direction: row;
 }
+
 .cent3{
     background-color: #69dfe1;
 }
+.cent4{
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
 .centIzq{
     height: 24.2em;
-    width: 20em;
+    width: 24.2em;
     background: no-repeat;
     background-size: cover;
     background-position: center;
@@ -62,6 +68,8 @@ body{
     justify-content: center;
     align-items: center;
     background-color: white;
+    margin-left: 2em;
+
 }
 
 .centCent{
@@ -76,11 +84,15 @@ body{
 }
 .centDer{
     height: 24.2em;
-    width: 20em;
+    width: 24.2em;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-right: 2em;
 }
 /*Seleccion Jugador 1*/
 .col1{
@@ -95,6 +107,9 @@ body{
     width: 20em;
     height: 20em;
     background-color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 .player1{
     height: 3em;
@@ -141,6 +156,9 @@ body{
     width: 20em;
     height: 20em;
     background-color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 .jug1{
     height: 7.5em;
@@ -226,4 +244,24 @@ body{
     background-color: #69dfe1;
     color: #22346c;
     width: 8em;
+}
+
+.supIzq3{
+    width: 20em;
+    height: 4em;
+    background-color: #22346c;
+    border-radius: 2em;
+    border:0.2em solid #69dfe1;
+    margin-right: 8em;
+    color: #69dfe1;
+
+}
+.supDer3{
+    width: 20em;
+    height: 4em;
+    background-color:#22346c;
+    border-radius: 2em;
+    border:0.2em solid #69dfe1;
+    margin-left: 8em;
+    color: #69dfe1;
 }
